--- a/deploy/config.toml.sample
+++ b/deploy/config.toml.sample
@@ -20,6 +20,14 @@ cache_redis_host = "127.0.0.1"
 cache_redis_port = 6379
 cache_redis_db = 10
 
+# Crontab jobs
+[[jobs]]
+name = 'sentry-cleanup'
+is-abspath = true
+enable = true
+restriction = "@monthly"
+command = "sentry cleanup --days=30"
+
 [files."deploy/nginx/sentry.conf"]
     server_name = "sentry.huhulab.com"
     server_proxy_pass = ""
